--- a/ddclassify.1
+++ b/ddclassify.1
@@ -19,7 +19,7 @@ ddclassify \- Dewey Decimal Classifier
 .I [-i isbn]
 
 .B ddclassify
-.I [-d path [-p pattern] [-r] [-e directories] [-c /path/to/library [-m 1|2|4|8]] [-misfile]]
+.I [-d path [-p pattern] [-r] [-e directories] [-c /path/to/library [-m 1|2|4|8|17|18|20|24]] [-misfile]]
 
 .B ddclassify
 .I [-x /path/to/ddc.xml]
